<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      >
    <item android:id="@+id/menu_optomize"
          android:title="@string/menu_optomize"
          android:checkable="true"/>
    <item android:id="@+id/menu_anti_alias"
          android:title="@string/menu_anti_alias"
          android:checkable="true"/>
    <item android:id="@+id/menu_gyroscope"
          android:title="@string/menu_gyroscope"
          android:checkable="true"/>
    <item android:id="@+id/menu_start_tools"
          android:title="@string/menu_start_tools"/>


    <item
        android:id="@+id/menu_help"
        android:orderInCategory="991"
        android:title="@string/menu_help">
        <menu>
            <item
                android:id="@+id/menu_help_screen"
                android:title="@string/menu_help"/>
            <item
                android:id="@+id/menu_about"
                android:title="@string/menu_about"/>
            <item
                android:id="@+id/menu_privacy"
                android:title="@string/menu_privacy"/>
        </menu>
    </item>
</menu>
