<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
    >

    <ListView
        android:layout_width="match_parent"
        android:layout_weight="0.70"
        android:layout_height="0dp"
        android:id="@+id/gameSelectView"
        android:layout_gravity="center_horizontal"
        android:choiceMode="singleChoice"
        android:listSelector="#666666" />

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/button_nif_display"
        android:onClick="showNifDisplay"
        android:id="@+id/nifButton"
        android:layout_weight="0.04"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/kfdisplaytext"
        android:id="@+id/kfButton"
        android:onClick="showKfDisplay"
        android:layout_weight="0.04"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/jbulletdisplaytext"
        android:id="@+id/jbulletButton"
        android:onClick="showJBulletDisplay"
        android:layout_weight="0.04"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/esexplorertext"
        android:id="@+id/esexplorerButton"
        android:onClick="showESExplorer"
        android:layout_weight="0.04"/>





</LinearLayout>


